# querierd

./: .gitignore  ChangeLog.md  Makefile.am  README.md  TODO.md  configure.ac  querierd.conf
.github/workflows/: build.yml  coverity.yml  release.yml
lib/: pidfile.c
src/: .gitignore  Makefile.am  bridge.c  cfparse.y  config.c  defs.h  dvmrp.h  iface.c  iface.h  igmp.c  igmpv2.h  inet.c  ipc.c  kern.c  log.c  main.c  netlink.c  pathnames.h  pev.h  querierctl.c  timer.c  vif.c  vif.h
test/: .gitignore  Makefile.am  basic.sh  ipc.sh  late.sh  lib.sh  sleepy.sh  two.sh
